--- a/WebApp.Shop/WebApp.Shop.csproj
+++ b/WebApp.Shop/WebApp.Shop.csproj
@@ -29,6 +29,7 @@
 		<Folder Include="Areas\FileManager\Data\" />
 		<Folder Include="Areas\FileManager\Models\" />
 		<Folder Include="Areas\FileManager\Views\" />
+		<Folder Include="Neptons\Models\" />
 		<Folder Include="SqlScripts\" />
 	</ItemGroup>
 
