--- a/WebApp.Shop/WebApp.Shop.csproj
+++ b/WebApp.Shop/WebApp.Shop.csproj
@@ -10,6 +10,12 @@
 		<TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
 	</PropertyGroup>
 	<ItemGroup>
+	  <Compile Remove="SqlScripts\**" />
+	  <Content Remove="SqlScripts\**" />
+	  <EmbeddedResource Remove="SqlScripts\**" />
+	  <None Remove="SqlScripts\**" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.OData" Version="8.0.11" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.9">
 			<PrivateAssets>all</PrivateAssets>
@@ -27,7 +33,6 @@
 
 	<ItemGroup>
 		<Folder Include="Neptons\Models\" />
-		<Folder Include="SqlScripts\" />
 	</ItemGroup>
 
 
