--- a/WebApp.Shop/WebApp.Shop.csproj
+++ b/WebApp.Shop/WebApp.Shop.csproj
@@ -36,6 +36,7 @@
 		<Folder Include="app\src\model_structure\implements\" />
 		<Folder Include="Neptons\Models\" />
 		<Folder Include="tempPath\" />
+		<Folder Include="wwwroot\css\" />
 	</ItemGroup>
 
 
